FIRST GUI IMPLEMENTATION
project is divided into 4 parts:
main.cpp (launcher)
server.cpp/.h (server code)
chat.cpp/.h (chat gui)
globals.cpp/.h (global variables)

implemented gui for one client
changed CMakeLists.txt
added cyrillic font
added history & chat windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,36 @@
 cmake_minimum_required(VERSION 3.27)
-project(untitled)
-
+project(chat)
 set(CMAKE_CXX_STANDARD 23)
 
+add_executable(chat
+        original.cpp
+        server.cpp
+        clientgui.cpp
+        imgui/imgui_demo.cpp
+        imgui/imgui_tables.cpp
+        imgui/imgui_draw.cpp
+        imgui/imgui_widgets.cpp
+        imgui/imgui.cpp
 
-ADD_LIBRARY(LibsModule
+        imgui/backends/imgui_impl_win32.cpp
+        imgui/backends/imgui_impl_dx11.cpp
+        server.h
+        clientgui.h
+        original.h
         main.cpp
+        globals.cpp
+
+
+        #    "${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends/*.cpp"
+)
+find_package(OpenGL REQUIRED)
+target_include_directories(chat PUBLIC
+        imgui/
+        imgui/backends/
+
 )
 
-target_link_libraries(LibsModule -lws2_32)
 
-add_executable(untitled main.cpp)
-target_link_libraries(untitled LibsModule)
+target_link_libraries(chat -lws2_32 d3d11 d3dcompiler dwmapi)
+
+
