fixed unused imports and CMakeLists.txt fixed font path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,28 @@
-cmake_minimum_required(VERSION 3.27)
+cmake_minimum_required(VERSION 3.26)
 project(chat)
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(chat
-        original.cpp
-        server.cpp
-        clientgui.cpp
+add_executable(chat 
+       
+       
         imgui/imgui_demo.cpp
         imgui/imgui_tables.cpp
         imgui/imgui_draw.cpp
         imgui/imgui_widgets.cpp
         imgui/imgui.cpp
-
         imgui/backends/imgui_impl_win32.cpp
         imgui/backends/imgui_impl_dx11.cpp
-        server.h
-        clientgui.h
-        original.h
+ 
         main.cpp
         globals.cpp
+        server.cpp
+        clientgui.cpp
+        # original.cpp
 
+        server.h
+        clientgui.h
+        # original.h
 
-        #    "${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends/*.cpp"
 )
 find_package(OpenGL REQUIRED)
 target_include_directories(chat PUBLIC
